feat: improved currency options